--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -41,8 +41,11 @@ footer {
   max-width: 43rem;
 }
 
-@media (max-device-width: 950px) {
+@media (max-width: 950px) {
   .footer__info {
     gap: 2rem;
+  }
+  footer {
+    align-items: flex-start;
   }
 }
